update existing recipe